src/app/viewport/viewport.component.scss
#container {
  position: absolute;
  inset: 0 0 0 0;
  height: 100%;
}

.left-panel {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.search {
  height: 59px;
  background: var(--primary);
  color: var(--on-primary);

  // TODO remove this after demo
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0 20px;
  font-size: 15px;

  /* sticky div */
  position: sticky;
  top: 0;
  z-index: 10;
  flex-shrink: 0;
}


//.sidebar {
//  height: 90%;
//  overflow: hidden;
//}

.on-primary {
  color: var(--on-primary);
}

.right-panel {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.top {
  height: 59px;
  background: var(--primary);
  color: var(--on-primary);
  flex-shrink: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 20px;
}

.content {
  flex: 1 1 auto;
}


.custom-gutter {
  background: var(--primary);
  width: 100%;
  height: 100%;
}

.custom-left-gutter {
  //This creates a linear gradient that transitions from --on-primary to the --primary color at the 60px mark from top to bottom.
  background: linear-gradient(to bottom, var(--on-primary) 60px, var(--primary) 60px);
  width: 100%;
  height: 100%;
}

.species-interactor-container {
  display: flex;
  flex-direction: row;
  width: 100%;
  //width: calc(100% - 2px); __<<ngThemingMigrationEscapedComment1>>__
  gap: 2px;
  height: 56px;

  /* sticky div */
  position: sticky;
  top: 0;
  z-index: 10;
}

.species,
.interactor {
  width: 50%;
  background: var(--surface-variant);
  color: var(--on-surface-variant);
  border-bottom: 1px solid var(--on-surface-variant);

  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
}

.custom-icon {
  height: 48px;
  width: 48px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.custom-icon::ng-deep svg * {
  fill: var(--on-surface-variant);
}

.selected .custom-icon::ng-deep svg * {
  fill: var(--primary);
}

.selected {
  background: var(--surface5);
  border-bottom: 2px solid var(--primary);
  color: var(--primary);
}

.species-content,
.overlay-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding: 0;
  width: 72px;

  span:first-child {
    font-size: 10px;
    height: 16px
  }

  span:last-child {
    font-size: 14px;
    height: 20px
  }
}

.event-hierarchy {
  height: 100%;
  overflow-x: hidden;

  /* sticky div helper */
  //overflow-y: auto; //Ensure the sidebar can scroll if content overflows
}

